# Otus_homework_py

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: README.md  base.py  car.py  exceptions.py  plane.py
homework_03/: Dockerfile  README.md  pyproject.toml  views.py
homework_04/: README.md  __init__.py  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html
